fix brief of chocies too long

--- a/themes/mirror/static/css/style.css
+++ b/themes/mirror/static/css/style.css
@@ -407,7 +407,7 @@ ul.latest li a {
 
 .choice-block {
   display:block;
-  overflow:auto;
+  overflow:overlay;
   position:relative;
   margin-bottom: 25px;
 }
